crates/escalier/tests/errors/incompatible_types.error
args don't match expected params:
Error: Incompatible types
   ╭─[<unknown>:2:23]
   │
 1 │ let add = (a: number, b: number): number => a + b;
   ·               ───┬──  
   ·                  ╰──── number
 2 │ let sum: string = add("hello", "world");
   ·                       ───┬───  
   ·                          ╰───── "hello"
───╯

Error: Incompatible types
   ╭─[<unknown>:2:32]
   │
 1 │ let add = (a: number, b: number): number => a + b;
   ·                          ───┬──  
   ·                             ╰──── number
 2 │ let sum: string = add("hello", "world");
   ·                                ───┬───  
   ·                                   ╰───── "world"
───╯

number is not assignable to string:
Error: Incompatible types
   ╭─[<unknown>:1:45]
   │
 1 │ let add = (a: number, b: number): number => a + b;
   ·                                             ──┬──  
   ·                                               ╰──── number
 2 │ let sum: string = add("hello", "world");
   ·          ───┬──  
   ·             ╰──── string
───╯

args don't match expected params:
Error: Incompatible types
   ╭─[<unknown>:5:5]
   │
 4 │ let add = (a, b) => a + b;
   ·            ┬  
   ·            ╰── number
 5 │ add("hello", "world");
   ·     ───┬───  
   ·        ╰───── "hello"
───╯

Error: Incompatible types
   ╭─[<unknown>:5:14]
   │
 4 │ let add = (a, b) => a + b;
   ·               ┬  
   ·               ╰── number
 5 │ add("hello", "world");
   ·              ───┬───  
   ·                 ╰───── "world"
───╯

"5" is not assignable to number:
Error: Incompatible types
   ╭─[<unknown>:8:17]
   │
 8 │ let b: number = "5";
   ·        ───┬──   ─┬─  
   ·           ╰────────── number
   ·                  │   
   ·                  ╰─── "5"
───╯
